clients/layout: fix mobile layout issues

--- a/clients/apps/web/src/styles/globals.scss
+++ b/clients/apps/web/src/styles/globals.scss
@@ -110,10 +110,10 @@
     --primary: 217 100% 50%;
     --primary-foreground: 231 17% 100%;
 
-    --secondary: 234 15% 13%;
+    --secondary: 233 10% 5%;
     --secondary-foreground: 231 17% 100%;
 
-    --muted: 234 15% 13%;
+    --muted: 233 10% 5%;
     --muted-foreground: 233 10% 36%;
 
     --accent: 217 100% 50%;
